--- a/public/preferences.html
+++ b/public/preferences.html
@@ -75,7 +75,7 @@
         let ws;
         
         function connectWebSocket() {
-            ws = new WebSocket(`wss://${window.location.host}`);
+            ws = new WebSocket(`wss://${window.location.host}/ws`);
             
             ws.onopen = () => {
                 console.log('WebSocket connected');
